# predoServerC

./: CMakeLists.txt  README.md  SevSeg.h  esp_httpd_priv.h  httpd_main.c  httpd_parse.c  httpd_sess.c  httpd_txrx.c  httpd_uri.c  main.c  main.h  wifi.h
inc/: 4bitLCD.h  PredoHttpServer.h  SevSeg.h  esp_http_priv.h  esp_httpd_priv.h  http_parser.h  osal.h
src/: 4bitLCD.c  SevSeg.c  http_parser.c  httpd_main.c  httpd_parse.c  httpd_sess.c  httpd_txrx.c  httpd_uri.c  wifi.c
